cocoa: draw BackgroundGradientView separators darker in Increase Contrast mode

BUG=687227

Review-Url: https://codereview.chromium.org/2710093002
Cr-Commit-Position: refs/heads/master@{#452532}