chrome/browser/ui/cocoa/background_gradient_view.mm
@@ -99,6 +99,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   const ui::ThemeProvider* themeProvider = [window themeProvider];
   if (!themeProvider)
     return [NSColor blackColor];
+  if (themeProvider->ShouldIncreaseContrast()) {
+    if ([window hasDarkTheme])
+      return [NSColor whiteColor];
+    else
+      return [NSColor blackColor];
+  }
   return themeProvider->GetNSColor(
              ThemeProperties::COLOR_DETACHED_BOOKMARK_BAR_SEPARATOR);
 }
